--- a/aula06/menu.html
+++ b/aula06/menu.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    
+    <header>
+         <h1>logo</h1>
+         <nav>
+            <li><a href="">Principal</a></li>
+            <li><a href="">Contato</a></li>
+            <li><a href="">Sobre mim</a></li>
+         </nav>
+
+    </header>
 </body>
 </html>
