--- a/aula06/kk.html
+++ b/aula06/kk.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background</title>
-    <link rel="stylesheet" href="style2.css">
-</head>
+    <title>kk</title>
+    <link rel="stylesheet" href="style4.css">
+</head>   
 <body>
-    
+
+    <h1>Bem vindo ao meu site!</h1>
+    <img src="" alt="">
+
 </body>
 </html>
